Problem-3 : Refactoring